车身动效完善、功能按钮切换效果完善

--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
         display: block;
         cursor: pointer;
       }
+      .activeBtn{
+        color: #4399eb;
+      }
 
     </style>
   </head>
   <body>
     <div id="app"></div>
     <div class="funcButtons">
-      <div class="funcButton" id="funcButtonTunnel">隧道</div>
+      <div class="funcButton activeBtn" id="funcButtonTunnel">隧道</div>
       <div class="funcButton" id="funcButtonCarBody">车身</div>
       <div class="funcButton" id="funcButtonWindage">风阻</div>
       <div class="funcButton" id="funcButtonRadar">雷达</div>
